--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -49,7 +49,7 @@ DISABLE_AUTO_UPDATE="true"
 # Custom plugins may be added to ~/.oh-my-zsh/custom/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=({{ ohmyzsh_plugins }})
+plugins=(git colored-man-page colorize extract history npm symfony2 httpie zsh-syntax-highlighting zsh-autosuggestions)
 
 # User configuration
 
